Update security and certification section

--- a/docs/Operation/kuber/AB/5.md
+++ b/docs/Operation/kuber/AB/5.md
@@ -93,6 +93,22 @@ kube-controller-manager --pod-eviction-timeout=5m0s
 - Cluster Upgrade Process
 - Backup and Restore Methodologies
 
+### Eviction API
+
+#### drain
+
+- cordon with tag NoSchedule
+- add tag NoExecute
+- remove old pods without these two condition
+
+#### cordon
+
+- add tag NoSchedule to node
+
+#### uncordon
+
+- add tag NoSchedule to node
+
 ## Kubernetes Releases
 
 There are many solution to install kubernetes cluster
