--- a/docs/Operation/kuber/AB/7.md
+++ b/docs/Operation/kuber/AB/7.md
@@ -1,1 +1,450 @@
 # 07. Security
+
+## Secure Hosts
+
+- Root access disabled
+- Password base authentication disabled
+- Only ssh-key based authentication to be made available
+
+## Kube API-Server
+
+### Kube API-Server in the Frontline of Defense
+
+- Controlling access to the API server itself
+
+### We need two types of decision
+
+- who can access? (Authentication)
+- what can they do? (Authorization)
+
+### Authentication - who can access
+
+- File: username and password
+- File: username and token
+- Certificates
+- External Authentication Provider - LDAP
+- Service Accounts
+
+### Authorization - what can they do
+
+- RBAC authorization
+- ABAC authorization
+- Node authorization
+- Webhook Mode
+
+## Authentication
+
+- Admins
+- Developers
+- End Users
+- Bots (such as gitlab runner)
+
+### Admins
+
+### Developers
+
+### Bots
+
+- Service Accounts
+
+### Types
+
+All kubernetes [authentication types]
+
+**Note:** Kubernetes official recommendation method is **RoleBaseAuthentication**
+
+## Certificates
+
+### CA authority
+
+- ca.key
+- ca.crt
+
+### Server
+
+#### ETCD
+
+- etcdserver.key
+- etcdserver.crt
+
+#### API-Server
+
+- apiserver.key
+- apiserver.crt
+
+#### Kubelet
+
+- kubelet.key
+- kubelet.crt
+
+### Client
+
+#### Admin
+
+- admin.key
+- admin.crt
+
+#### Kube-APIServer
+
+- apiserver-etcd-client.key
+- apiserver-etcd-client.crt
+
+- apiserver-kubelet-client.key
+- apiserver-kubelet-client.crt
+
+#### Kubelet
+
+- kubelet-client.key
+- kubelet-client.crt
+
+#### Kube-Scheduler
+
+- scheduler.key
+- scheduler.crt
+
+#### Kube-Controller
+
+- control-manager.key
+- control-manager.crt
+
+#### Kube-Proxy
+
+- kubeproxy.key
+- kubeproxy.crt
+
+## Generate Certificates
+
+### CA
+
+1. generate key `ca.key`
+
+```bash
+openssl genrsa -out ca.key 2048
+```
+
+2. certificate sign request `ca.csr`
+
+```bash
+openssl req -new -key ca.key -subj "/CN=KUBERNETES-CA" -out ca.csr
+```
+
+3. sign Certificate `ca.crt`
+
+```bash
+openssl x509 -req -in ca.csr -signkey ca.key -out ca.crt
+```
+
+### Admin
+
+1. generate key `admin.key`
+
+```bash
+openssl genrsa -out admin.key 2048
+```
+
+2. certificate sign request `admin.csr`
+
+```bash
+openssl req -new -key admin.key -subj "/CN=kube-admin \O=system:masters" -out admin.csr
+```
+
+3. sign Certificate `admin.crt`
+
+```bash
+openssl x509 -req -in admin.csr -CA ca.crt -CAkey ca.key -out admin.crt
+```
+
+### KubeAPIServer
+
+1. generate key `apiserver.key`
+
+```bash
+openssl genrsa -out apiserver.key 2048
+```
+
+2. certificate sign request `apiserver.csr`
+
+```bash
+openssl req -new -key apiserver.key -subj "/CN=kube-apiserver" -out apiserver.csr -config openssl.cnf
+```
+
+2.1. openssl.cfg
+
+```cnf
+[req]
+req_extensions = v3_req
+
+[ v3_reqy ]
+basicConstraints = CA:FALSE
+keyUsage = notRepudiation
+subjectAltName = @alt_names
+
+[alt_names]
+DNS.1 = kubernetes
+DNS.2 = kubernetes.default
+DNS.3 = kubernetes.default.svc
+DNS.4 = kubernetes.default.svc.cluster.local
+IP.1 = 10.96.0.1
+IP.2 = 192.168.1.10
+IP.3 = 172.17.0.87
+IP.4 = 5.96.44.165
+```
+
+3. sign Certificate `admin.crt`
+
+```bash
+openssl x509 -req -in admin.csr -CA ca.crt -CAkey ca.key -out admin.crt
+```
+
+![kube-api-server-certs-conf]
+
+### Kube-Scheduler
+
+1. generate key `scheduler.key`
+
+```bash
+openssl genrsa -out scheduler.key 2048
+```
+
+2. certificate sign request `scheduler.csr`
+
+```bash
+openssl req -new -key scheduler.key -subj "/CN=kube-scheduler \O=system:kube-scheduler" -out scheduler.csr
+```
+
+3. sign Certificate `scheduler.crt`
+
+```bash
+openssl x509 -req -in scheduler.csr -CA ca.crt -CAkey ca.key -out scheduler.crt
+```
+
+### Kube Controller-Manager
+
+1. generate key `controller-manager.key`
+
+```bash
+openssl genrsa -out controller-manager.key 2048
+```
+
+2. certificate sign request `controller-manager.csr`
+
+```bash
+openssl req -new -key controller-manager.key -subj "/CN=kube-controller-manager \O=system:kube-controller-manager" -out controller-manager.csr
+```
+
+3. sign Certificate `controller-manager.crt`
+
+```bash
+openssl x509 -req -in controller-manager.csr -CA ca.crt -CAkey ca.key -out controller-manager.crt
+```
+
+### ETCd Servers (does not test it)
+
+1. generate key `etcdserver.key`
+
+```bash
+openssl genrsa -out etcdserver.key 2048
+```
+
+2. certificate sign request `etcdserver.csr`
+
+```bash
+openssl req -new -key etcdserver.key -subj "/CN=etcdserver \O=etcd-server" -out etcdserver.csr
+```
+
+3. sign Certificate `etcdserver.crt`
+
+```bash
+openssl x509 -req -in etcdserver.csr -CA ca.crt -CAkey ca.key -out etcdserver.crt
+```
+
+### Kubelet
+
+1. generate key `kubelet.key`
+
+```bash
+openssl genrsa -out kubelet.key 2048
+```
+
+2. certificate sign request `kubelet.csr`
+
+```bash
+openssl req -new -key kubelet.key -subj "/CN=kubelet \O=system:kubelet" -out kubelet.csr
+```
+
+3. sign Certificate `kubelet.crt`
+
+```bash
+openssl x509 -req -in kubelet.csr -CA ca.crt -CAkey ca.key -out kubelet.crt
+```
+
+Kubelet client role certificate
+
+![kubelet-nodes-certs]
+
+### Kube Proxy
+
+1. generate key `kube-proxy.key`
+
+```bash
+openssl genrsa -out kube-proxy.key 2048
+```
+
+2. certificate sign request `kube-proxy.csr`
+
+```bash
+openssl req -new -key kube-proxy.key -subj "/CN=kube-proxy \O=system:kube-proxy" -out kube-proxy.csr
+```
+
+3. sign Certificate `kube-proxy.crt`
+
+```bash
+openssl x509 -req -in kube-proxy.csr -CA ca.crt -CAkey ca.key -out kube-proxy.crt
+```
+
+## kubeadm
+
+Check the expiration date of all certs
+
+```bash
+kubeadm certs -h
+kubeadm certs check-expiration
+```
+
+Renew all available  certs
+
+```bash
+kubeadm certs renew -h
+kubeadm certs renew all
+```
+
+## User Certification Creation Progress
+
+### Certificate API Flow
+
+1. User Create CertificateSigningRequest Object
+
+2. Review Requests by Admin
+
+3. Approve Request by Admin
+
+4. Share Certs to Users by Admin
+
+### Flow Example
+
+1. create a PrivateKey
+
+```bash
+openssl genrsa -out mehrdad.key 2048
+chmod 600 mehrdad.key # close permission to others
+```
+
+2. create a CSR
+
+```bash
+openssl req -new -key mehrdad.key -out mehrdad.csr
+```
+
+pass [CertificateSigningRequest] to admin for approvement
+
+3. put csr context to on line
+
+```bash
+cat mehrdad.csr | base64 | tr -d "\n" | pbcopy
+```
+
+4. create manifist file
+
+```yaml
+apiVersion: certificates.k8s.io/v1
+kind: CertificateSigningRequest
+metadata:
+  name: mehrdad
+  namespace: collector
+spec:
+  groups:
+  - system:authenticated
+  request: "LS0tLS1CRUdJTiBDRVJUSUZ==..."
+  signerName: kubernetes.io/kube-apiserver-client
+  usages:
+   - client auth
+```
+
+5. apply user's csr file
+
+```bash
+kubectl apply -f mehrdad-csr.yaml
+```
+
+6. get the list of csr
+
+```bash
+kubectl get csr
+```
+
+7. check csr context
+
+```bash
+kubectl describe  csr mehrdad
+```
+
+8. approve or deny user csr
+
+```bash
+kubectl certificate approve mehrdad
+or
+kubectl certificate deny mehrdad
+```
+
+9. check final user csr status
+
+```bash
+kubectl get csr
+```
+
+10. fetch the certificate id
+
+```bash
+kubectl get csr mehrdad -o yaml
+kubectl get csr mehrdad -o jsonpath='{.status.certificate}'
+kubectl get csr mehrdad -o jsonpath='{.status.certificate}' | base64 -d
+kubectl get csr mehrdad -o jsonpath='{.status.certificate}' | base64 -d | pbcopy
+kubectl get csr mehrdad -o jsonpath='{.status.certificate}' | base64 -d > mehrdad-signed-csr.crt
+```
+
+11. fetch ca.crt cert file from master node
+
+```bash
+[cp/scp] /etc/kubernetes/ssl/ca.crt /path/to/ca/dir/ca.crt
+```
+
+12. we should have these 3 files
+
+- I. mehrdad.key
+- II. mehrdad-signed-csr.crt
+- III. ca.crt
+
+13. check the final value of signed cert
+
+```bash
+openssl x509 -in mehrdad-signed-csr.crt -text -noout
+```
+
+check the important fiels like, issuer, common-name and etc
+
+## CA Authority Module in Kubernetes
+
+### Controller-Manger
+
+- **CSR-APPROVING** and **CSR-SIGNING** modules are responsible for **CA Authority** in kubernetes cluster
+
+---
+
+<!-- links -->
+[authentication types]: https://kubernetes.io/docs/reference/access-authn-authz/authentication/
+
+[kube-api-server-certs-conf]: ../../../assets/kuber/kinpic/S07-security-kube-api-server-certs.png
+
+[kubelet-nodes-certs]: ../../../assets/kuber/kinpic/S07-security-kubelet-certs.png
+
+[CertificateSigningRequest]: https://kubernetes.io/docs/reference/access-authn-authz/certificate-signing-requests/
