--- a/docs/Operation/kuber/AB/7.md
+++ b/docs/Operation/kuber/AB/7.md
@@ -438,6 +438,24 @@ check the important fiels like, issuer, common-name and etc
 
 - **CSR-APPROVING** and **CSR-SIGNING** modules are responsible for **CA Authority** in kubernetes cluster
 
+## Getting Request to API Server
+
+### using CURL
+
+```bash
+curl https://192.168.1.101:6443/api/v1/nodes --key mehrdad.key --cert mehrdad-signed-csr.crt --cacert ca.crt
+```
+
+### using Kubectl
+
+```bash
+ kubectl get nodes
+        --server https://node1:6443
+        --client-key mehrdad.key
+        --client-certificate mehrdad-signed-csr.crt
+        --certificate-authority ca.crt
+```
+
 ---
 
 <!-- links -->
