--- a/docs/Operation/kuber/AB/7.md
+++ b/docs/Operation/kuber/AB/7.md
@@ -456,6 +456,75 @@ curl https://192.168.1.101:6443/api/v1/nodes --key mehrdad.key --cert mehrdad-si
         --certificate-authority ca.crt
 ```
 
+### Using Kubectl
+
+Before you get request via kubectl, you need to put all configs into a specific file `kubectl-config.yaml` with absolute path of certs files.
+
+```yaml
+apiVersion: v1
+clusters:
+- cluster:
+    certificate-authority: /home/sre/k8s/manifests/certificate/ca.crt
+    server: https://192.168.1.101:6443
+  name: cka
+contexts:
+- context:
+    cluster: cka
+    user: mehrdad
+  name: mehrdad@cka
+current-context: mehrdad@cka
+kind: Config
+preferences: {}
+users:
+- name: mehrdad
+  user:
+    client-certificate: /home/sre/k8s/manifests/certificate/mehrdad.crt
+    client-key: /home/sre/k8s/manifests/certificate/mehrdad.key
+```
+
+you can also put values instead of file path
+
+- first you need to encode context to `base64`
+
+```bash
+cat ca.crt | base64 | tr -d "\n" | pbcopy
+cat client.crt | base64 | tr -d "\n" | pbcopy
+cat client.key | base64 | tr -d "\n" | pbcopy
+```
+
+- change some fields, append `data` to end of the keys
+
+```yaml
+apiVersion: v1
+clusters:
+- cluster:
+    certificate-authority-data: ""
+    server: https://192.168.1.101:6443
+  name: cka
+contexts:
+- context:
+    cluster: cka
+    user: mehrdad
+  name: mehrdad@cka
+current-context: mehrdad@cka
+kind: Config
+preferences: {}
+users:
+- name: mehrdad
+  user:
+    client-certificate-data: ""
+    client-key-data: ""
+```
+
+check it after doing above step
+
+```bash
+kubectl --kubeconfig=kube-config-mehrdad.yaml config view
+kubectl --kubeconfig kube-config-mehrdad.yaml config get-users
+kubectl --kubeconfig kube-config-mehrdad.yaml config get-clusters
+kubectl --kubeconfig kube-config-mehrdad.yaml config get-contexts
+```
+
 ---
 
 <!-- links -->
