--- a/docs/Operation/kuber/AB/7.md
+++ b/docs/Operation/kuber/AB/7.md
@@ -525,6 +525,12 @@ kubectl --kubeconfig kube-config-mehrdad.yaml config get-clusters
 kubectl --kubeconfig kube-config-mehrdad.yaml config get-contexts
 ```
 
+set default context
+
+```bash
+kubectl config use-context <context-name>
+```
+
 ---
 
 <!-- links -->
