--- a/docs/Operation/kuber/AB/7.md
+++ b/docs/Operation/kuber/AB/7.md
@@ -79,7 +79,7 @@ All kubernetes [authentication types]
 
 ### Client
 
-#### Admin
+#### Admin User
 
 - admin.key
 - admin.crt
@@ -116,19 +116,19 @@ All kubernetes [authentication types]
 
 ### CA
 
-1. generate key `ca.key`
+1: generate key `ca.key`
 
 ```bash
 openssl genrsa -out ca.key 2048
 ```
 
-2. certificate sign request `ca.csr`
+2: certificate sign request `ca.csr`
 
 ```bash
 openssl req -new -key ca.key -subj "/CN=KUBERNETES-CA" -out ca.csr
 ```
 
-3. sign Certificate `ca.crt`
+3: sign Certificate `ca.crt`
 
 ```bash
 openssl x509 -req -in ca.csr -signkey ca.key -out ca.crt
@@ -136,19 +136,19 @@ openssl x509 -req -in ca.csr -signkey ca.key -out ca.crt
 
 ### Admin
 
-1. generate key `admin.key`
+1: generate key `admin.key`
 
 ```bash
 openssl genrsa -out admin.key 2048
 ```
 
-2. certificate sign request `admin.csr`
+2: certificate sign request `admin.csr`
 
 ```bash
 openssl req -new -key admin.key -subj "/CN=kube-admin \O=system:masters" -out admin.csr
 ```
 
-3. sign Certificate `admin.crt`
+3: sign Certificate `admin.crt`
 
 ```bash
 openssl x509 -req -in admin.csr -CA ca.crt -CAkey ca.key -out admin.crt
@@ -156,13 +156,13 @@ openssl x509 -req -in admin.csr -CA ca.crt -CAkey ca.key -out admin.crt
 
 ### KubeAPIServer
 
-1. generate key `apiserver.key`
+1: generate key `apiserver.key`
 
 ```bash
 openssl genrsa -out apiserver.key 2048
 ```
 
-2. certificate sign request `apiserver.csr`
+2: certificate sign request `apiserver.csr`
 
 ```bash
 openssl req -new -key apiserver.key -subj "/CN=kube-apiserver" -out apiserver.csr -config openssl.cnf
@@ -190,7 +190,7 @@ IP.3 = 172.17.0.87
 IP.4 = 5.96.44.165
 ```
 
-3. sign Certificate `admin.crt`
+3: sign Certificate `admin.crt`
 
 ```bash
 openssl x509 -req -in admin.csr -CA ca.crt -CAkey ca.key -out admin.crt
@@ -200,19 +200,19 @@ openssl x509 -req -in admin.csr -CA ca.crt -CAkey ca.key -out admin.crt
 
 ### Kube-Scheduler
 
-1. generate key `scheduler.key`
+1: generate key `scheduler.key`
 
 ```bash
 openssl genrsa -out scheduler.key 2048
 ```
 
-2. certificate sign request `scheduler.csr`
+2: certificate sign request `scheduler.csr`
 
 ```bash
 openssl req -new -key scheduler.key -subj "/CN=kube-scheduler \O=system:kube-scheduler" -out scheduler.csr
 ```
 
-3. sign Certificate `scheduler.crt`
+3: sign Certificate `scheduler.crt`
 
 ```bash
 openssl x509 -req -in scheduler.csr -CA ca.crt -CAkey ca.key -out scheduler.crt
@@ -220,19 +220,19 @@ openssl x509 -req -in scheduler.csr -CA ca.crt -CAkey ca.key -out scheduler.crt
 
 ### Kube Controller-Manager
 
-1. generate key `controller-manager.key`
+1: generate key `controller-manager.key`
 
 ```bash
 openssl genrsa -out controller-manager.key 2048
 ```
 
-2. certificate sign request `controller-manager.csr`
+2: certificate sign request `controller-manager.csr`
 
 ```bash
 openssl req -new -key controller-manager.key -subj "/CN=kube-controller-manager \O=system:kube-controller-manager" -out controller-manager.csr
 ```
 
-3. sign Certificate `controller-manager.crt`
+3: sign Certificate `controller-manager.crt`
 
 ```bash
 openssl x509 -req -in controller-manager.csr -CA ca.crt -CAkey ca.key -out controller-manager.crt
@@ -240,19 +240,19 @@ openssl x509 -req -in controller-manager.csr -CA ca.crt -CAkey ca.key -out contr
 
 ### ETCd Servers (does not test it)
 
-1. generate key `etcdserver.key`
+1: generate key `etcdserver.key`
 
 ```bash
 openssl genrsa -out etcdserver.key 2048
 ```
 
-2. certificate sign request `etcdserver.csr`
+2: certificate sign request `etcdserver.csr`
 
 ```bash
 openssl req -new -key etcdserver.key -subj "/CN=etcdserver \O=etcd-server" -out etcdserver.csr
 ```
 
-3. sign Certificate `etcdserver.crt`
+3: sign Certificate `etcdserver.crt`
 
 ```bash
 openssl x509 -req -in etcdserver.csr -CA ca.crt -CAkey ca.key -out etcdserver.crt
@@ -260,19 +260,19 @@ openssl x509 -req -in etcdserver.csr -CA ca.crt -CAkey ca.key -out etcdserver.cr
 
 ### Kubelet
 
-1. generate key `kubelet.key`
+1: generate key `kubelet.key`
 
 ```bash
 openssl genrsa -out kubelet.key 2048
 ```
 
-2. certificate sign request `kubelet.csr`
+2: certificate sign request `kubelet.csr`
 
 ```bash
 openssl req -new -key kubelet.key -subj "/CN=kubelet \O=system:kubelet" -out kubelet.csr
 ```
 
-3. sign Certificate `kubelet.crt`
+3: sign Certificate `kubelet.crt`
 
 ```bash
 openssl x509 -req -in kubelet.csr -CA ca.crt -CAkey ca.key -out kubelet.crt
@@ -284,19 +284,19 @@ Kubelet client role certificate
 
 ### Kube Proxy
 
-1. generate key `kube-proxy.key`
+1: generate key `kube-proxy.key`
 
 ```bash
 openssl genrsa -out kube-proxy.key 2048
 ```
 
-2. certificate sign request `kube-proxy.csr`
+2: certificate sign request `kube-proxy.csr`
 
 ```bash
 openssl req -new -key kube-proxy.key -subj "/CN=kube-proxy \O=system:kube-proxy" -out kube-proxy.csr
 ```
 
-3. sign Certificate `kube-proxy.crt`
+3: sign Certificate `kube-proxy.crt`
 
 ```bash
 openssl x509 -req -in kube-proxy.csr -CA ca.crt -CAkey ca.key -out kube-proxy.crt
@@ -322,24 +322,24 @@ kubeadm certs renew all
 
 ### Certificate API Flow
 
-1. User Create CertificateSigningRequest Object
+1: User Create CertificateSigningRequest Object
 
-2. Review Requests by Admin
+2: Review Requests by Admin
 
-3. Approve Request by Admin
+3: Approve Request by Admin
 
-4. Share Certs to Users by Admin
+4: Share Certs to Users by Admin
 
 ### Flow Example
 
-1. create a PrivateKey
+1: create a PrivateKey
 
 ```bash
 openssl genrsa -out mehrdad.key 2048
 chmod 600 mehrdad.key # close permission to others
 ```
 
-2. create a CSR
+2: create a CSR
 
 ```bash
 openssl req -new -key mehrdad.key -out mehrdad.csr
@@ -347,13 +347,13 @@ openssl req -new -key mehrdad.key -out mehrdad.csr
 
 pass [CertificateSigningRequest] to admin for approvement
 
-3. put csr context to on line
+3: put csr context to on line
 
 ```bash
 cat mehrdad.csr | base64 | tr -d "\n" | pbcopy
 ```
 
-4. create manifist file
+4: create manifist file
 
 ```yaml
 apiVersion: certificates.k8s.io/v1
@@ -370,25 +370,25 @@ spec:
    - client auth
 ```
 
-5. apply user's csr file
+5: apply user's csr file
 
 ```bash
 kubectl apply -f mehrdad-csr.yaml
 ```
 
-6. get the list of csr
+6: get the list of csr
 
 ```bash
 kubectl get csr
 ```
 
-7. check csr context
+7: check csr context
 
 ```bash
 kubectl describe  csr mehrdad
 ```
 
-8. approve or deny user csr
+8: approve or deny user csr
 
 ```bash
 kubectl certificate approve mehrdad
@@ -396,13 +396,13 @@ or
 kubectl certificate deny mehrdad
 ```
 
-9. check final user csr status
+9: check final user csr status
 
 ```bash
 kubectl get csr
 ```
 
-10. fetch the certificate id
+10: fetch the certificate id
 
 ```bash
 kubectl get csr mehrdad -o yaml
@@ -412,25 +412,37 @@ kubectl get csr mehrdad -o jsonpath='{.status.certificate}' | base64 -d | pbcopy
 kubectl get csr mehrdad -o jsonpath='{.status.certificate}' | base64 -d > mehrdad-signed-csr.crt
 ```
 
-11. fetch ca.crt cert file from master node
+11: fetch ca.crt cert file from master node
 
 ```bash
 [cp/scp] /etc/kubernetes/ssl/ca.crt /path/to/ca/dir/ca.crt
 ```
 
-12. we should have these 3 files
+12: we should have these 3 files
 
 - I. mehrdad.key
 - II. mehrdad-signed-csr.crt
 - III. ca.crt
 
-13. check the final value of signed cert
+13: check the final value of signed cert
 
 ```bash
 openssl x509 -in mehrdad-signed-csr.crt -text -noout
 ```
 
-check the important fiels like, issuer, common-name and etc
+14: check which Certificate Authority (CA) signed your certificate
+
+```bash
+openssl x509 -in mehrdad.crt -noout -issuer
+```
+
+15: check CA validity sign
+
+```bash
+openssl verify -CAfile ca.crt user.crt
+```
+
+check the important fields like, issuer, common-name and etc
 
 ## CA Authority Module in Kubernetes
 
