--- a/docs/Operation/kuber/AB/7.md
+++ b/docs/Operation/kuber/AB/7.md
@@ -353,7 +353,7 @@ pass [CertificateSigningRequest] to admin for approvement
 cat mehrdad.csr | base64 | tr -d "\n" | pbcopy
 ```
 
-4: create manifist file
+4: create manifest file
 
 ```yaml
 apiVersion: certificates.k8s.io/v1
