--- a/docs/Operation/kuber/AB/7.md
+++ b/docs/Operation/kuber/AB/7.md
@@ -1,4 +1,4 @@
-# 07. Security
+# 07. Authentication
 
 ## Secure Hosts
 
@@ -347,7 +347,7 @@ openssl req -new -key mehrdad.key -out mehrdad.csr
 
 pass [CertificateSigningRequest] to admin for approvement
 
-3: put csr context to on line
+3: put csr context to one line
 
 ```bash
 cat mehrdad.csr | base64 | tr -d "\n" | pbcopy
