--- a/docs/Operation/kuber/AB/7.md
+++ b/docs/Operation/kuber/AB/7.md
@@ -468,7 +468,7 @@ curl https://192.168.1.101:6443/api/v1/nodes --key mehrdad.key --cert mehrdad-si
         --certificate-authority ca.crt
 ```
 
-### Using Kubectl
+### using kubeconfig
 
 Before you get request via kubectl, you need to put all configs into a specific file `kubectl-config.yaml` with absolute path of certs files.
 
