change some code block

--- a/docs/Operation/kuber/AB/7.md
+++ b/docs/Operation/kuber/AB/7.md
@@ -336,7 +336,12 @@ kubeadm certs renew all
 
 ```bash
 openssl genrsa -out mehrdad.key 2048
-chmod 600 mehrdad.key # close permission to others
+```
+
+modify to correct permission
+
+```bash
+chmod 600 mehrdad.key others
 ```
 
 2: create a CSR
@@ -404,8 +409,15 @@ kubectl get csr
 
 10: fetch the certificate id
 
+- print in yaml format
+
 ```bash
 kubectl get csr mehrdad -o yaml
+```
+
+- print/copy in json format
+
+```bash
 kubectl get csr mehrdad -o jsonpath='{.status.certificate}'
 kubectl get csr mehrdad -o jsonpath='{.status.certificate}' | base64 -d
 kubectl get csr mehrdad -o jsonpath='{.status.certificate}' | base64 -d | pbcopy
@@ -420,8 +432,8 @@ kubectl get csr mehrdad -o jsonpath='{.status.certificate}' | base64 -d > mehrda
 
 12: we should have these 3 files
 
-- I. mehrdad.key
-- II. mehrdad-signed-csr.crt
+- I. client-private.key
+- II. client-signed-csr.crt
 - III. ca.crt
 
 13: check the final value of signed cert
@@ -455,20 +467,23 @@ check the important fields like, issuer, common-name and etc
 ### using CURL
 
 ```bash
-curl https://192.168.1.101:6443/api/v1/nodes --key mehrdad.key --cert mehrdad-signed-csr.crt --cacert ca.crt
+curl https://192.168.1.101:6443/api/v1/nodes \
+    --key mehrdad.key \
+    --cert mehrdad-signed-csr.crt \
+    --cacert ca.crt
 ```
 
 ### using Kubectl
 
 ```bash
- kubectl get nodes
-        --server https://node1:6443
-        --client-key mehrdad.key
-        --client-certificate mehrdad-signed-csr.crt
+ kubectl get nodes \
+        --server https://node1:6443 \
+        --client-key mehrdad.key \
+        --client-certificate mehrdad-signed-csr.crt \
         --certificate-authority ca.crt
 ```
 
-### using kubeconfig
+### using kubectl-config file
 
 Before you get request via kubectl, you need to put all configs into a specific file `kubectl-config.yaml` with absolute path of certs files.
 
@@ -500,7 +515,17 @@ you can also put values instead of file path
 
 ```bash
 cat ca.crt | base64 | tr -d "\n" | pbcopy
+```
+
+- encode and copy `client.crt`
+
+```bash
 cat client.crt | base64 | tr -d "\n" | pbcopy
+```
+
+- encode and copy `client.key`
+
+```bash
 cat client.key | base64 | tr -d "\n" | pbcopy
 ```
 
