change some code block

--- a/docs/Operation/kuber/AB/7.md
+++ b/docs/Operation/kuber/AB/7.md
@@ -358,7 +358,7 @@ pass [CertificateSigningRequest] to admin for approvement
 cat mehrdad.csr | base64 | tr -d "\n" | pbcopy
 ```
 
-4: create manifest file
+4: create manifest file `mehrdad-csr.yaml`
 
 ```yaml
 apiVersion: certificates.k8s.io/v1
@@ -369,7 +369,7 @@ metadata:
 spec:
   groups:
   - system:authenticated
-  request: "LS0tLS1CRUdJTiBDRVJUSUZ==..."
+  request: "LS0tLS1CRUdJTiBDRVJUSUZ==..." # output of step #3
   signerName: kubernetes.io/kube-apiserver-client
   usages:
    - client auth
@@ -390,14 +390,20 @@ kubectl get csr
 7: check csr context
 
 ```bash
-kubectl describe  csr mehrdad
+kubectl describe csr mehrdad
 ```
 
 8: approve or deny user csr
 
+- if you decided to **approve**
+
 ```bash
 kubectl certificate approve mehrdad
-or
+```
+
+- if you decided to **deny**
+
+```bash
 kubectl certificate deny mehrdad
 ```
 
@@ -415,12 +421,16 @@ kubectl get csr
 kubectl get csr mehrdad -o yaml
 ```
 
-- print/copy in json format
+- print in json format
 
 ```bash
 kubectl get csr mehrdad -o jsonpath='{.status.certificate}'
 kubectl get csr mehrdad -o jsonpath='{.status.certificate}' | base64 -d
-kubectl get csr mehrdad -o jsonpath='{.status.certificate}' | base64 -d | pbcopy
+```
+
+- write to cert file
+
+```bash
 kubectl get csr mehrdad -o jsonpath='{.status.certificate}' | base64 -d > mehrdad-signed-csr.crt
 ```
 
