--- a/docs/Operation/kuber/AB/7.md
+++ b/docs/Operation/kuber/AB/7.md
@@ -543,30 +543,42 @@ cat client.key | base64 | tr -d "\n" | pbcopy
 
 ```yaml
 apiVersion: v1
+
 clusters:
 - cluster:
-    certificate-authority-data: ""
+    certificate-authority-data: "<ca.crt base64 encoded value>"
     server: https://192.168.1.101:6443
   name: cka
+
 contexts:
 - context:
     cluster: cka
     user: mehrdad
   name: mehrdad@cka
+- context:
+    cluster: cka
+    user: babak
+  name: babak@cka
+
 current-context: mehrdad@cka
 kind: Config
 preferences: {}
+
 users:
 - name: mehrdad
   user:
-    client-certificate-data: ""
-    client-key-data: ""
+    client-certificate-data: "<mehrdad.crt base64 encoded value>"
+    client-key-data: "<mehrdad.key base64 encoded value>"
+- name: babak
+  user:
+    client-certificate-data: "<babak.crt base64 encoded value>"
+    client-key-data: "<babak.key base64 encoded value>"
 ```
 
 check it after doing above step
 
 ```bash
-kubectl --kubeconfig=kube-config-mehrdad.yaml config view
+kubectl --kubeconfig kube-config-mehrdad.yaml config view
 kubectl --kubeconfig kube-config-mehrdad.yaml config get-users
 kubectl --kubeconfig kube-config-mehrdad.yaml config get-clusters
 kubectl --kubeconfig kube-config-mehrdad.yaml config get-contexts
@@ -577,6 +589,53 @@ set default context
 ```bash
 kubectl config use-context <context-name>
 ```
+
+finally you should have config file like it
+
+```yaml
+apiVersion: v1
+
+clusters:
+- cluster:
+    certificate-authority-data: LS0tLS1CRUdJTiBDRVJUSUZJQ0....
+    server: https://192.168.1.101:6443
+  name: cluster.local
+
+contexts:
+- context:
+    cluster: cluster.local
+    user: kubernetes-admin
+  name: kubernetes-admin@cluster.local
+- context:
+    cluster: cluster.local
+    user: mehrdad-admin
+  name: mehrdad-admin@cluster.local
+- context:
+    cluster: cluster.local
+    user: babak-admin
+    namespace: collector
+  name: babak-admin@cluster.local
+
+current-context: kubernetes-admin@cluster.local
+kind: Config
+preferences: {}
+
+users:
+- name: kubernetes-admin
+  user:
+    client-certificate-data: LS0tLS1CRUdJTiBDRVJ...
+    client-key-data: LS0tLS1CRUdJTiBSU0EgUFJJ...
+- name: babak-admin
+  user:
+    client-certificate-data: LS0tLS1CRUdJTiBDRVJUSUZJQ0...
+    client-key-data: LS0tLS1CRUdJTiBQUklWQVR...
+- name: mehrdad-admin
+  user:
+    client-certificate-data: LS0tLS1CRUdJTiBDRVJUSUZJQ0...
+    client-key-data: LS0tLS1CRUdJTiBQUklWQV...
+```
+
+**Note:** All the hashed values have been encoded to `base64`
 
 ---
 
