--- a/docs/Operation/kuber/AB/7.md
+++ b/docs/Operation/kuber/AB/7.md
@@ -637,6 +637,12 @@ users:
 
 **Note:** All the hashed values have been encoded to `base64`
 
+get config context
+
+```bash
+kubectl config get-contexts
+```
+
 ---
 
 <!-- links -->
