--- a/docs/Operation/kuber/AB/7.md
+++ b/docs/Operation/kuber/AB/7.md
@@ -584,12 +584,6 @@ kubectl --kubeconfig kube-config-mehrdad.yaml config get-clusters
 kubectl --kubeconfig kube-config-mehrdad.yaml config get-contexts
 ```
 
-set default context
-
-```bash
-kubectl config use-context <context-name>
-```
-
 finally you should have config file like it
 
 ```yaml
@@ -640,7 +634,22 @@ users:
 get config context
 
 ```bash
-kubectl config get-contexts
+kubectl --kubeconfig <new-config> config get-contexts
+```
+
+set default context
+
+```bash
+kubectl --kubeconfig <new-config> config use-context <context-name>
+```
+
+set default config
+
+- copy the new-config to `~/.kube/config`
+- or set the `KUBECONFIG` environment variable
+
+```bash
+export KUBECONFIG=/path/to/your/new/config
 ```
 
 ---
