--- a/docs/Operation/kuber/AB/8.md
+++ b/docs/Operation/kuber/AB/8.md
@@ -65,6 +65,10 @@ Roll Base Access Control
 
 **Note:** if you don't specific authorization mode, apiserver consider `AlwaysAllow` mode.
 
+### Context
+
+switch between contexts via [kubectx]
+
 ### Commands
 
 Check verb access to specific resource
@@ -91,3 +95,4 @@ kubectl auth can-i <v-name> <res-name> --as <user-name> --namespace <namespace-n
 [ABAC]: https://kubernetes.io/docs/reference/access-authn-authz/abac/
 [RBAC]: https://kubernetes.io/docs/reference/access-authn-authz/rbac/
 [Webhook]: https://kubernetes.io/docs/reference/access-authn-authz/webhook/
+[kubectx]: https://github.com/ahmetb/kubectx
