--- a/docs/Operation/kuber/AB/8.md
+++ b/docs/Operation/kuber/AB/8.md
@@ -77,7 +77,7 @@ Check verb access to specific resource
 kubectl auth can-i <verb-name> <resource-name>
 ```
 
-on be half of other user
+on be half of the other user
 
 ```bash
 kubectl auth can-i <v-name> <res-name> --as <user-name> --namespace <namespace-name>
