--- a/docs/Operation/kuber/AB/8.md
+++ b/docs/Operation/kuber/AB/8.md
@@ -65,9 +65,130 @@ Roll Base Access Control
 
 **Note:** if you don't specific authorization mode, apiserver consider `AlwaysAllow` mode.
 
+### Role and RoleBinding
+
+- rbac role
+
+```yaml
+apiVersion: rbac.authorization.k8s.io/v1
+kind: Role
+metadata:
+  name: developer
+  namespace: collector
+rules:
+  - apiGroups: [""]
+    resources: ["pods"]
+    verbs: ["list", "get", "create", "update", "delete"]
+  - apiGroups:
+      - apps
+    resources:
+      - deployments
+      - replicasets
+    verbs:
+      - list
+      - get
+      - create
+      - update
+      - delete
+    resourceName:
+      - nginx
+```
+
+- role-binder
+
+```yaml
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: mehrdad-as-developer
+  namespace: collector
+roleRef:
+  kind: Role
+  name: developer
+  apiGroup: rbac.authorization.k8s.io
+subjects:
+  - kind: User
+    name: mehrdad
+    apiGroup: rbac.authorization.k8s.io
+```
+
 ### Context
 
 switch between contexts via [kubectx]
+
+### ClusterRole
+
+Some of the resources are independent from namespace, such and nodes, namespaces, pv and ect. so we can need to the another role across the entire of cluster. It called `ClusterRole`.
+
+Also you can get all kubernetes resources via these commands
+
+- get all kubernetes resources
+
+```bash
+kubectl api-resources
+```
+
+- get the resources **outside** from namespace scope
+
+```bash
+kubectl api-resources --namespaced=false
+```
+
+- get the resources **inside** in namespace scope
+
+```bash
+kubectl api-resources --namespaced=false
+```
+
+- cluster role
+
+```yaml
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: amdins-role
+rules:
+  - apiGroups:
+      - apps
+    resources:
+      - pods
+      - deployments
+      - replicasets
+      - namespases
+      - nodes
+      - persistentvolumes
+    verbs:
+      - list
+      - get
+      - create
+      - update
+      - delete
+```
+
+- cluster role binder
+
+```yaml
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: admins-role-binder
+roleRef:
+  kind: ClusterRole
+  name: admins-role
+  apiGroup: rbac.authorization.k8s.io
+subjects:
+  - kind: User
+    name: mehrdad
+    apiGroup: rbac.authorization.k8s.io
+```
+
+**Note:** during the creation of client certificate you can assign a created kubernetes role to **Organization Unit**, and after the user gives all roles from kubernetes.
+
+- check the list of available ClusterRole
+
+```bash
+kubectl get clusterroles
+```
 
 ### Commands
 
