Add private docker registry authentication

--- a/docs/Operation/kuber/AB/8.md
+++ b/docs/Operation/kuber/AB/8.md
@@ -190,6 +190,29 @@ subjects:
 kubectl get clusterroles
 ```
 
+## Image Security
+
+### image schema structure
+
+assume we have a image link like this: `docker.io/mehrdad/nginx:1.7` and `k8s.io/kubernetes/kubelet:1.29`
+
+```sql
+repo:    | registry  | account name | image name   |
+         -------------------------------------------
+image1:  | docker.io | mehrdad      | nginx:1.7    |
+image2:  | k8s.io    | kubernetes   | kubeadm:1.29 |
+```
+
+If we want to use a private repository in our cluster, we need to set `secret` config for authenticate in private registry.
+
+#### Create Secret
+
+create in dry-run mode and get yaml output
+
+```bash
+kubectl -n <namespace-name> create secret docker-registry <secret-cluster-name> --docker-username=<username> --docker-password=<password> --dry-run=client -o yaml > docker-secret.yaml
+ ```
+
 ### Commands
 
 Check verb access to specific resource
