--- a/docs/Operation/kuber/AB/8.md
+++ b/docs/Operation/kuber/AB/8.md
@@ -213,6 +213,39 @@ create in dry-run mode and get yaml output
 kubectl -n <namespace-name> create secret docker-registry <secret-cluster-name> --docker-username=<username> --docker-password=<password> --dry-run=client -o yaml > docker-secret.yaml
  ```
 
+Check your secret value:
+
+```bash
+ echo "<value of .dockerconfigjson key"> | base64 -d | jq .
+```
+
+after check validation run
+
+```bash
+kubectl apply -f docker-secret.yaml
+```
+
+create pod with private registry address
+
+```yaml
+apiVersion: v1
+kind: Pod
+metadata:
+  name: "pod-private-repo"
+  namespace: collector
+spec:
+  imagePullSecrets:
+    - name: prv-reg-secret
+  containers:
+  - name: pod-private-repo
+    image: "private-repo-url"
+    command:
+    - sleep
+    - infinity
+```
+
+**Note:** `imagePullSecrets` is the critical key to handle private registry authentication
+
 ### Commands
 
 Check verb access to specific resource
