add security-context pod & container

--- a/docs/Operation/kuber/AB/8.md
+++ b/docs/Operation/kuber/AB/8.md
@@ -205,7 +205,7 @@ image2:  | k8s.io    | kubernetes   | kubeadm:1.29 |
 
 If we want to use a private repository in our cluster, we need to set `secret` config for authenticate in private registry.
 
-#### Create Secret
+### Create Secret
 
 create in dry-run mode and get yaml output
 
@@ -245,6 +245,43 @@ spec:
 ```
 
 **Note:** `imagePullSecrets` is the critical key to handle private registry authentication
+
+## Security Context
+
+change user-id in pod and container spec and deny to access user root!
+
+```yaml
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: security-context-deployment
+  namespace: collector
+spec:
+  selector:
+    matchLabels:
+      app: security-context-sample
+  replicas: 1
+  template:
+    metadata:
+      labels:
+        app: security-context-sample
+    spec:
+      securityContext:
+        runAsUser: 1000 # change user-id
+      containers:
+        - name: security-context
+          image: alpine:3.11.3
+          command:
+            - sleep
+            - infinity
+          securityContext:
+              runAsUser: 1001 # override pod spec.securityContext.runAsUser
+              runAsGroup: 2000
+              capabilities:
+                  add:
+                   - "MAC_ADMIN"
+                   - "SYS_ADMIN"
+```
 
 ### Commands
 
