Add cert-manager link

--- a/docs/Operation/kuber/AB/7.md
+++ b/docs/Operation/kuber/AB/7.md
@@ -55,6 +55,8 @@ All kubernetes [authentication types]
 
 ## Certificates
 
+[cert-manager] third party kubernetes certificate manager
+
 ### CA authority
 
 - ca.key
@@ -662,3 +664,5 @@ export KUBECONFIG=/path/to/your/new/config
 [kubelet-nodes-certs]: ../../../assets/kuber/kinpic/S07-security-kubelet-certs.png
 
 [CertificateSigningRequest]: https://kubernetes.io/docs/reference/access-authn-authz/certificate-signing-requests/
+
+[cert-manager]: https://cert-manager.io/
