--- a/docs/Operation/kuber/AB/8.md
+++ b/docs/Operation/kuber/AB/8.md
@@ -283,6 +283,29 @@ spec:
                    - "SYS_ADMIN"
 ```
 
+## Network Policy
+
+### Traffic Direction
+
+- **Ingress:** incoming traffic
+- **Egress:** outgoing traffic
+
+```sql
+                       +------------+
+Ingress: 80     -->    | WebServer  |    -->     Egress: 5000
+                       +------------+
+Ingress: 5000   -->    | API Server |    -->     Egress: 3306
+                       +------------+
+Ingress: 3306   -->    |    ETCD    |
+                       +------------+
+```
+
+### Tips
+
+- By default:
+  - all the **Ingress** traffic are closed
+  - all the **Egress** traffic are opened
+
 ### Commands
 
 Check verb access to specific resource
