--- a/docs/Operation/kuber/AB/8.md
+++ b/docs/Operation/kuber/AB/8.md
@@ -300,11 +300,119 @@ Ingress: 3306   -->    |    ETCD    |
                        +------------+
 ```
 
-### Tips
+#### Tips
 
 - By default:
   - all the **Ingress** traffic are closed
   - all the **Egress** traffic are opened
+
+#### Network Policy Ingress Scenario
+
+we need to a cluster-ip service with it's pod
+
+```yaml
+apiVersion: v1
+kind: Service
+metadata:
+  name: webserver
+  namespace: collector
+spec:
+  type: ClusterIP
+  selector:
+    app: webserver
+  ports:
+    - port: 80
+      targetPort: 80
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: webserver
+  namespace: collector
+  labels:
+    app: webserver
+spec:
+  replicas: 3
+  selector:
+    matchLabels:
+      app: webserver
+  template:
+    metadata:
+      labels:
+        app: webserver
+    spec:
+      containers:
+        - name: nginx
+          image: nginx:1.7.9
+          ports:
+            - containerPort: 80
+```
+
+we should have pods, "green" and "red" and we want to set a network policy that just green can connect to our webserver
+
+```yaml
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: green/red
+  namespace: collector
+  labels:
+    app: green/red
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: green/red
+  template:
+    metadata:
+      labels:
+        app: green/red
+    spec:
+      containers:
+        - name: green/red
+          image: apline:3.11.3
+          command:
+            - sleep
+            - infinity
+```
+
+go to **red** and **green** container and run
+
+```bash
+curl webserver
+curl webserver.collector.services.cluster.local # FQDN
+```
+
+it times to add network policy and apply some rules
+
+```yaml
+apiVersion: networking.k8s.io/v1
+kind: NetworkPolicy
+metadata:
+  name: webserver-netpolicy
+  namespace: collector
+spec:
+  podSelector:
+    matchLabels:
+      app: webserver
+  policyTypes:
+    - Ingress
+  ingress:
+    - from:
+        - podSelector:
+            matchLabels:
+              app: green
+      ports:
+        - protocol: TCP
+          port: 80
+```
+
+check again
+
+```bash
+curl webserver
+curl webserver.collector.services.cluster.local # FQDN
+```
 
 ### Commands
 
