add some kubectl commands

--- a/docs/Operation/kuber/AB/09.md
+++ b/docs/Operation/kuber/AB/09.md
@@ -14,4 +14,26 @@
 
 ## Container Storage Interface
 
+CSIs are a set of RPCs (Remove Procedure  Call) that used by one of  orchestrator such as Kubernetes, Nomad and should implement by storage platform such as Ceph, glusterFS, MinIo.
+
+```bash
++---------------+----------+--------------------+
+| Orchestrator  =   RPCs   =  Storage Platform  |
++---------------+----------+--------------------+
+```
+
 ## Persistent Volumes
+
+### PV
+
+**Persistent Volumes** or **PV** in short, manages and *predefined* by K8S administrator
+
+#### Access Mode
+
+- **ReadOnlyMany**: Mount more than one pod but just in ReadOnly mode
+- **ReadWriteOnce**: Mount with just one pod in ReadWrite mode
+- **ReadWriteMany**: Mount to many pods in ReadWrite mode
+
+### PVC
+
+**Persistent Volume Claim** or **PVC** in short,
