--- a/docs/Operation/kuber/AB/09.md
+++ b/docs/Operation/kuber/AB/09.md
@@ -34,6 +34,28 @@ CSIs are a set of RPCs (Remove Procedure  Call) that used by one of  orchestrato
 - **ReadWriteOnce**: Mount with just one pod in ReadWrite mode
 - **ReadWriteMany**: Mount to many pods in ReadWrite mode
 
+## Persistent Volumes Claim
+
 ### PVC
 
 **Persistent Volume Claim** or **PVC** in short,
+
+### Binding Policy
+
+- **Sufficient Capacity**
+- **Access Mode**
+- **Volume Mode**
+- **Storage Class**
+- **Selectors**
+
+### persistentVolumeReclaimPolicy
+
+- **Retain**: After it's PVC is deleted, the PV is still remain and must delete manually by kubernetes administrator, and useless by other PVCs
+
+- **Delete**: As soon as it's related PVC is deleted, the related PV is deleted too.
+
+- **Recycle**: Like *Retain* by one special difference, if PVC is deleted PV is still and it's own data will be deleted and ready to serve another PVC
+
+## Storage Classes
+
+Storage Class automates all the processes after user creates its own PVC. In fact Storage Class create a create storage request, create a proper PV and bind PVC to PV automatically.
