--- a/docs/Operation/kuber/AB/09.md
+++ b/docs/Operation/kuber/AB/09.md
@@ -59,3 +59,11 @@ CSIs are a set of RPCs (Remove Procedure  Call) that used by one of  orchestrato
 ## Storage Classes
 
 Storage Class automates all the processes after user creates its own PVC. In fact Storage Class create a create storage request, create a proper PV and bind PVC to PV automatically.
+
+### Storage Class Workflow
+
+1. Pod requests request for a PVC
+2. User creates PVC
+3. StorageClass makes request to a storage provider (Provisioner)
+4. StorageClass makes PV
+5. StorageClass binds PV to PVC
