--- a/docs/Operation/kuber/AB/09.md
+++ b/docs/Operation/kuber/AB/09.md
@@ -67,3 +67,25 @@ Storage Class automates all the processes after user creates its own PVC. In fac
 3. StorageClass makes request to a storage provider (Provisioner)
 4. StorageClass makes PV
 5. StorageClass binds PV to PVC
+
+## StateFullSet
+
+When we need to set **sequence priority** (*one after another*) between services and also set a **static name** for resources (*pod*).
+
+### MySQL scenario for STS
+
+In this scenario we need from 3 MySQL nodes. One master, and two worker.
+
+**Note 1**: If each pod is crashed, STS up it again with *previous resource name*.
+
+**Note 2**: Scale up and down is also sequential in STS.
+
+#### Scenario Sequence
+
+1. Setup master first and then workers
+2. Clone data from master to worker-1
+3. Enable continuous replication from master-1 to worker-1
+4. Wait for worker-1 to be ready
+5. Clone data from worker-1 to worker-2
+6. Enable continuous replication from master to worker-2
+7. Configure master address on workers (static name)
