Fix StateFulSet typo

--- a/docs/Operation/kuber/AB/09.md
+++ b/docs/Operation/kuber/AB/09.md
@@ -68,7 +68,7 @@ Storage Class automates all the processes after user creates its own PVC. In fac
 4. StorageClass makes PV
 5. StorageClass binds PV to PVC
 
-## StateFullSet
+## StateFulSet
 
 When we need to set **sequence priority** (*one after another*) between services and also set a **static name** for resources (*pod*).
 
