اولین کامیت فارسی

--- a/docs/Operation/kuber/AB/10.md
+++ b/docs/Operation/kuber/AB/10.md
@@ -1,1 +1,24 @@
 # 10. StateFulSets Storage
+
+## Storage Controller
+
+List of some useful storage controller
+
+- [MetaController]
+- [OperatorSDK]
+- [Kudo]
+
+## Prometheus High Availability
+
+- [thanos]
+
+## Object Storage
+
+- [MinIO]
+
+<!-- links -->
+[MetaController]: https://metacontroller.github.io/metacontroller/
+[OperatorSDK]: https://sdk.operatorframework.io/
+[Kudo]: https://kudo.dev/
+[thanos]: https://thanos.io/
+[MinIO]: https://min.io/
